# polygon-env

./: .gitignore  .pre-commit-config.yaml  main.py  merge.py  pyproject.toml
src/polygon_env/: problem.py  solution.py  utils.py
src/polygon_env/checker/: __init__.py  checker.py  results.py
src/polygon_env/problem/: problem.py
src/polygon_env/problem/statement_templates/: __init__.py  statement.md.jinja
src/polygon_env/solution/: __init__.py  runners.py  timemem_limit.py
src/polygon_env/testlib/: __init__.py  testlib.h
tests/: __init__.py  test_checker.py  test_solution_runners.py  test_utils.py
tests/test_problems/: __init__.py  golden_results.py
tests/test_problems/0/: check.cpp  problem.xml
tests/test_problems/0/solutions/: main_1.cpp  main_2.cpp  wrong_1.cpp  wrong_2.cpp
tests/test_problems/0/tests/: 02  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  (+27 more)
