[project.urls]
# Repository = "https://..."
# Homepage = "https://..."
# Documentation = "https://..."

[project]
name = "polygon-env"
description = "Turn Polygon packages into RL environments."
authors = [{ name = "Albert Fazlyev", email = "albert.fz@yandex.ru" }]
readme = "README.md"
requires-python = ">3.10,<3.13"
dynamic = ["version"]
# https://pypi.org/classifiers/
classifiers = [
    # Include this to avoid accidentally publishing to PyPI:
    # "Private :: Do Not Upload"
]

dependencies = [
    "polars>=1.27.1,<2",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
    "types-tqdm>=4.67.0.20250516",
]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.5",
    "pytest-sugar>=1.0.0",
]
# docs = [
#     "mkdocs>=1.6.1",
#     "mkdocstrings[python]>=0.29.1",
#     "mkdocs-material>=9.6.14",
#     "mkdocs-literate-nav>=0.6.2",
#     "mkdocs-section-index>=0.3.10",
#     "mkdocs-gen-files>=0.5.0",
# ]


[build-system]
requires = [
    "hatchling",
    "uv-dynamic-versioning",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = "true"

[tool.hatch.build.targets.wheel]
packages = ["src/polygon_env"]


[tool.ruff]
line-length = 96

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # See: https://docs.astral.sh/ruff/rules/
    "E", # https://docs.astral.sh/ruff/rules/#error-e
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim

]
ignore = [
    # Disable some rules that are overly pedantic. Add/remove as desired:
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
    # We use both ruff formatter and linter so some rules should always be disabled.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117", # https://docs.astral.sh/ruff/rules/over-indented/
    "D100", # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D202", # https://docs.astral.sh/ruff/rules/blank-line-after-function/
    "D203", # https://docs.astral.sh/ruff/rules/incorrect-blank-line-before-class/
    "D204", # https://docs.astral.sh/ruff/rules/incorrect-blank-line-after-class/
    "D206", # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D212", # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
    "D300", # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "D400", # https://docs.astral.sh/ruff/rules/missing-trailing-period/
    "D401", # https://docs.astral.sh/ruff/rules/non-imperative-mood/
    "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001", # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002", # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003", # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.basedpyright]
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
reportAny = false
reportExplicitAny = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
